# ironic

./: .gitignore  Cargo.toml  README.md  create_binfiles_from_nand.bat  create_binfiles_from_nand.sh  ironic.code-workspace
back/: Cargo.toml
back/src/: back.rs  debug.rs  interp.rs  lib.rs  ppc.rs
back/src/bits/: arm.rs  mod.rs  thumb.rs
back/src/decode/: arm.rs  thumb.rs
back/src/interp/: dispatch.rs  lut.rs
back/src/interp/arm/: branch.rs  dataproc.rs  loadstore.rs  misc.rs  mod.rs  multiply.rs  status.rs
back/src/interp/thumb/: branch.rs  dataproc.rs  loadstore.rs  misc.rs
core/: Cargo.toml
core/src/: bus.rs  cpu.rs  dev.rs  lib.rs  mem.rs
core/src/bus/: decode.rs  dispatch.rs  mmio.rs  prim.rs  task.rs
core/src/cpu/: alu.rs  coproc.rs  excep.rs  mmu.rs  psr.rs  reg.rs
core/src/cpu/mmu/: prim.rs
core/src/dbg/: ios.rs
core/src/dev/: aes.rs  ehci.rs  hlwd.rs  nand.rs  ohci.rs  sdhc.rs  sha.rs
core/src/dev/hlwd/: compat.rs  ddr.rs  gpio.rs  ipc.rs  irq.rs  otp.rs
core/src/dev/hlwd/compat/: ai.rs  di.rs  dsp.rs  exi.rs  mem.rs  pi.rs  si.rs  vi.rs
core/src/dev/hlwd/gpio/: seeprom.rs
core/src/dev/nand/: util.rs
core/src/dev/sdhc/: card.rs  wifi.rs
core/src/dev/sha/: util.rs
cronic/: cronic.c  cronic.h  unicorn-emulation.c
pyronic/: dev_sha_exploit.py  es_gettitles.py  es_gettitles_write.py  kernel_boot.py  launch_bc.py  launch_bc_ios58.py  load_ios.py  read_bootstub.py  sdcard.py  unicorn_emulation.py
pyronic/pyronic/: client.py  ios.py  socket.py
src/: utils.rs
tui/: Cargo.toml
tui/src/: main.rs
