[package]
name = "ironic-backend"
version = "0.1.0"
authors = ["meta <eigenform@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf = "0.0.10"
uds_windows = "1.0.2"
ironic-core = { path = "../core" }
