[package]
name = "ironic-backend"
version = "0.1.0"
authors = ["meta <eigenform@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = ["std", "backtrace"] }
elf = "0.0.10"
ironic-core = { path = "../core" }
log = { version = "0.4.17", default-features = false, features = ["std"] }
