[package]
name = "ironic-tui"
version = "0.1.0"
authors = ["meta <eigenform@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ironic-core = { path = "../core" }
ironic-backend = { path = "../back" }

clap = { version = "4.0.26", features = ["std", "derive", "suggestions", "color", "wrap_help"]}
anyhow = { version = "1.0.66", features = ["std", "backtrace"] }
log = { version = "0.4.17", default-features = false, features = ["std"] }
fern = { version = "0.6.1", features = ["colored"] }
