[package]
name = "ironic-tui"
version = "0.1.0"
authors = ["meta <eigenform@users.noreply.github.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ironic-core = { path = "../core" }
ironic-backend = { path = "../back" }

clap = { version = "4.2.1", features = ["std", "derive", "suggestions", "color", "wrap_help"]}
anyhow = { version = "1.0.40", features = ["std", "backtrace"] }
log = { version = "0.4.17", default-features = false, features = ["std"] }
fern = { version = "0.6.2", features = ["colored"] }
strum = { version = "~0.25", features = ["derive"] }
addr2line = { version = "~0.20.0", default-features = false, features = ["std"] }
gimli = "~0.27.2"
ctrlc = { version = "3.4.0", features = ["termination"] }
parking_lot = { version = "~0.12.1", default-features = false, features = ["nightly", "hardware-lock-elision"] }
